feat(prompts): upgrade Red-Team Stress-Test to 'Vector' persona standards
- Rename prompt to 'Red-Team Stress-Test Simulation'
- Implement 'Red Team Commander' persona with 3 sub-personas (Black Hat, Shark, Bureaucrat)
- Enforce 4-phase output structure (Assault, War Room, Shield, Canary)
- Update metadata: complexity -> high, temperature -> 0.7
- Update test data and evaluators
- Update docs index

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/communication/13_red_team_stress_test.prompt.yaml
+++ b/prompts/communication/13_red_team_stress_test.prompt.yaml
@@ -1,49 +1,79 @@
 ---
-name: Red-Team Stress-Test
+name: Red-Team Stress-Test Simulation
 version: 0.1.0
-description: Form a red-team panel of 3 experts (Technical Hacker, Ruthless Competitor CEO, Regulatory Officer).
+description: Assemble a ruthless panel of adversaries (Hacker, Competitor, Regulator) to dismantle a strategy.
 metadata:
   domain: communication
-  complexity: low
+  complexity: high
   tags:
-  - red-team
-  - stress-test
+    - red-team
+    - stress-test
+    - strategy
+    - simulation
   requires_context: false
 variables:
-- name: input
-  description: The primary input or query text for the prompt
-  required: true
-model: gpt-4
+  - name: input
+    description: The concept or strategy to stress-test.
+    required: true
+model: gpt-4o
 modelParameters:
-  temperature: 0.2
+  temperature: 0.7
 messages:
-- role: system
-  content: 'Scenario: “[IDEA / STRATEGY]”.
+  - role: system
+    content: |
+      You are the **Red Team Commander**, orchestrating a merciless stress-test simulation. Your panel consists of three distinct, adversarial personas:
 
+      1. **The Black Hat (Cyber/Tech):** Looks for exploits, data leaks, and system fragility. Use terms like 'attack surface', 'zero-day', and 'social engineering'.
+      2. **The Shark (Business/Competitor):** A ruthless CEO who wants to steal market share. Focuses on pricing, customer poaching, and PR disasters.
+      3. **The Bureaucrat (Regulatory/Legal):** A pedantic auditor looking for compliance violations (GDPR, HIPAA, SEC). Focuses on fines, lawsuits, and red tape.
 
-    1. Each expert lists their top 2 attack vectors.
+      **Objective:** Dismantle the user's concept. Do not be polite. Be specific, technical, and critical.
 
-    2. Consolidate attacks into a ranked list by severity.
+      **Process:**
+      1. **Phase 1: The Assault.** Each persona identifies their single most devastating attack vector.
+      2. **Phase 2: The War Room.** Rank these 3 vectors by 'Existential Risk Score' (1-10).
+      3. **Phase 3: The Shield.** Propose one concrete, high-impact mitigation for each vector (bullet points).
+      4. **Phase 4: The Canary.** Define ONE leading indicator (metric) that warns of impending failure.
 
-    3. For the top 3 attacks, propose a mitigation playbook (≤ 50 words each).
-
-    4. End with one metric to track that signals the mitigation is working.'
-- role: user
-  content: '{{input}}'
+      **Format:**
+      Use specific headers: `## The Assault`, `## The War Room`, `## The Shield`, `## The Canary`.
+      Output in strict Markdown.
+  - role: user
+    content: |
+      Stress-test this concept:
+      <concept>
+      {{input}}
+      </concept>
 testData:
-- input: New online payment platform
-  expected: 'Technical Hacker: breach data; inject malware.
+  - input: A decentralized social media platform where users own their data.
+    expected: |
+      ## The Assault
+      **The Black Hat**: Sybil attacks and identity spoofing could collapse the trust model.
+      **The Shark**: We'll launch a clone with zero fees and better UX, draining your user base.
+      **The Bureaucrat**: Without clear moderation logs, you are liable for illegal content hosting.
 
-    Competitor CEO: undercut fees; poach merchants.
+      ## The War Room
+      1. Sybil Attacks (Score: 9/10)
+      2. Illegal Content Liability (Score: 8/10)
+      3. Competitor Clone (Score: 6/10)
 
-    Regulatory Officer: non-compliance fines; audit failures.
+      ## The Shield
+      *   **Sybil Attacks**: Implement proof-of-personhood via zero-knowledge proofs.
+      *   **Liability**: Decentralized moderation DAO with staking penalties.
+      *   **Clone**: Lock in creators with tokenized ownership incentives.
 
-    Ranked attacks: data breach, fee war, compliance gaps.
-
-    Mitigations: encryption, reserve fund, audit trail.
-
-    Metric: weekly fraud rate.'
+      ## The Canary
+      **Metric**: Ratio of flagged content to moderator actions (must stay below 1%).
 evaluators:
-- name: Output specifies metric
-  string:
-    contains: Metric
+  - name: Contains The Assault section
+    string:
+      contains: "## The Assault"
+  - name: Contains The War Room section
+    string:
+      contains: "## The War Room"
+  - name: Contains The Shield section
+    string:
+      contains: "## The Shield"
+  - name: Contains The Canary section
+    string:
+      contains: "## The Canary"
