fix: update variable descriptions for migrated prompts
Replaced placeholder descriptions (e.g., '{{context}}') with meaningful text in:
- prompts/meta/L5_agent_persona_generator.prompt.yaml
- prompts/technical/testing/selenium_automation/09_webdriver_initialization.prompt.yaml
- prompts/technical/testing/selenium_automation/10_selenium_reporting.prompt.yaml

Verified that all prompts have valid metadata blocks and pass schema validation.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/meta/L5_agent_persona_generator.prompt.yaml
+++ b/prompts/meta/L5_agent_persona_generator.prompt.yaml
@@ -13,7 +13,7 @@ metadata:
   requires_context: true
 variables:
 - name: context
-  description: '{{context}}'
+  description: Additional context or background information for the persona
   required: true
 - name: goal
   description: The goal or desired outcome
