--- a/prompts/technical/testing/selenium_automation/10_selenium_reporting.prompt.yaml
+++ b/prompts/technical/testing/selenium_automation/10_selenium_reporting.prompt.yaml
@@ -14,7 +14,7 @@ metadata:
   requires_context: true
 variables:
 - name: framework
-  description: '{{framework}}'
+  description: The testing framework (e.g., TestNG, JUnit)
   required: true
 - name: report_format
   description: The report format to use for this prompt
