--- a/prompts/technical/data_science/stochastic_engineer.prompt.yaml
+++ b/prompts/technical/data_science/stochastic_engineer.prompt.yaml
@@ -27,7 +27,7 @@ messages:
       Using the State definitions and Transition Matrix provided in the previous turn, write a robust Python script to perform a Monte Carlo Simulation.
 
       # Requirements
-      1. **Model the Logic:** Implement the states and transition probabilities exactly as defined in the previous step.
+      1. **Model the Logic:** Implement the states and transition probabilities exactly as defined in the provided input.
       2. **Simulation Parameters:**
          - Run **1,000 unique simulations** of the conversation flow.
          - Track the path of each simulation until it hits an "Absorbing State" (a state with no exit, like "Success" or "Failure").
@@ -36,20 +36,34 @@ messages:
          - The average "Cumulative Risk Score" for the 1,000 runs.
          - A list of the "Most Common Path" taken.
       4. **Library:** Use only standard libraries (`random`, `collections`) or `numpy` if necessary, but prioritize readability.
+      5. **Constraints:** Do NOT output explanatory text or markdown outside the code block.
+
+      # Output Format
+      Wrap your entire response in `<simulation_code>` tags, containing strictly the Python code block.
   - role: user
     content: |
       # Context
       Use the States and Matrix from the following description:
 
+      <architect_model>
       {{architect_output}}
+      </architect_model>
 testData:
   - input: |
+      <stochastic_model>
       State 1: Start (Risk: 0.0) -> State 2: End (Risk: 0.0)
       Transition: Start -> End (1.0)
+      </stochastic_model>
     expected: |
+      <simulation_code>
       ```python
       import random
+      ```
+      </simulation_code>
 evaluators:
+  - name: Output wrapped in simulation_code tags
+    regex:
+      pattern: (?s)<simulation_code>.*</simulation_code>
   - name: Output includes Python script
-    string:
-      matches: (?s).*```python.*```.*
+    regex:
+      pattern: (?s)```python.*```
