Remove `generate_workflow_diagrams.py`, updating CI workflows to use `generate_docs.py` and removing its documentation from the README.

--- a/.github/workflows/docs-automation.yml
+++ b/.github/workflows/docs-automation.yml
@@ -6,11 +6,11 @@ on:
             - main
         paths:
             - "prompts/**"
-            - "scripts/generate_docs.py"
+            - "tools/scripts/generate_docs.py"
     pull_request:
         paths:
             - "prompts/**"
-            - "scripts/generate_docs.py"
+            - "tools/scripts/generate_docs.py"
 
 permissions:
     contents: write
@@ -22,7 +22,7 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v3
               with:
-                  ref: ${{ github.head_ref }}  # Important for PRs to checkout the branch, not a detached HEAD
+                  ref: ${{ github.head_ref }} # Important for PRs to checkout the branch, not a detached HEAD
 
             - name: Set up Python
               uses: actions/setup-python@v4
@@ -31,11 +31,11 @@ jobs:
 
             - name: Install dependencies
               run: |
-                  pip install pyyaml
+                  pip install -r requirements.txt
 
             - name: Generate Documentation
               run: |
-                  python scripts/generate_docs.py
+                  python tools/scripts/generate_docs.py
 
             - name: Check for changes
               id: check_changes
