--- a/.github/workflows/docs-maintenance.yml
+++ b/.github/workflows/docs-maintenance.yml
@@ -1,27 +1,27 @@
 ---
 name: Docs Maintenance
 
-'on':
+"on":
   push:
     paths:
-      - 'prompts/**/*.prompt.yaml'
-      - 'prompts/**/*.prompt.yml'
-      - 'workflows/**/*.workflow.yaml'
-      - 'tools/scripts/fix_markdown_issues.py'
-      - 'tools/scripts/generate_overviews.py'
-      - 'tools/scripts/generate_workflow_diagrams.py'
-      - 'tools/scripts/update_docs_index.py'
-      - '.github/workflows/docs-maintenance.yml'
+      - "prompts/**/*.prompt.yaml"
+      - "prompts/**/*.prompt.yml"
+      - "workflows/**/*.workflow.yaml"
+      - "tools/scripts/fix_markdown_issues.py"
+      - "tools/scripts/generate_overviews.py"
+      - "tools/scripts/generate_docs.py"
+      - "tools/scripts/update_docs_index.py"
+      - ".github/workflows/docs-maintenance.yml"
   pull_request:
     paths:
-      - 'prompts/**/*.prompt.yaml'
-      - 'prompts/**/*.prompt.yml'
-      - 'workflows/**/*.workflow.yaml'
-      - 'tools/scripts/fix_markdown_issues.py'
-      - 'tools/scripts/generate_overviews.py'
-      - 'tools/scripts/generate_workflow_diagrams.py'
-      - 'tools/scripts/update_docs_index.py'
-      - '.github/workflows/docs-maintenance.yml'
+      - "prompts/**/*.prompt.yaml"
+      - "prompts/**/*.prompt.yml"
+      - "workflows/**/*.workflow.yaml"
+      - "tools/scripts/fix_markdown_issues.py"
+      - "tools/scripts/generate_overviews.py"
+      - "tools/scripts/generate_docs.py"
+      - "tools/scripts/update_docs_index.py"
+      - ".github/workflows/docs-maintenance.yml"
 
 permissions:
   contents: write
@@ -36,7 +36,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Fix markdown issues
@@ -47,8 +47,8 @@ jobs:
         run: python3 tools/scripts/update_docs_index.py
       - name: Validate prompts
         run: python3 tools/scripts/validate_prompt_schema.py
-      - name: Generate Workflow Diagrams
-        run: python3 tools/scripts/generate_workflow_diagrams.py
+      - name: Generate Documentation and Diagrams
+        run: python3 tools/scripts/generate_docs.py
       - name: Check for changes
         id: diff
         run: |
